tests/baselines/reference/parserRegularExpressionDivideAmbiguity4.errors.txt
parserRegularExpressionDivideAmbiguity4.ts(1,1): error TS2304: Cannot find name 'foo'.
parserRegularExpressionDivideAmbiguity4.ts(1,6): error TS1161: Unterminated regular expression literal.
parserRegularExpressionDivideAmbiguity4.ts(1,17): error TS1005: ')' expected.


==== parserRegularExpressionDivideAmbiguity4.ts (3 errors) ====
    foo(/notregexp);
    ~~~
!!! error TS2304: Cannot find name 'foo'.
         
!!! error TS1161: Unterminated regular expression literal.
                    
!!! error TS1005: ')' expected.